fix semantic antlr problems